--- a/source/public/index.html
+++ b/source/public/index.html
@@ -13,7 +13,7 @@
     <script src="/js/codemirror/mode/javascript/javascript.js"></script>
     <script src="/js/linkify/linkify.min.js"></script>
     <script src="/js/linkify/linkify-jquery.min.js"></script>
-    <script src="/js.php"></script>
+    <script src="js.php"></script>
     <script src="/js/cropit/dist/jquery.cropit.js"></script>
     <script type='text/javascript' data-cfasync='false'>
       mobile=$(window).width()<$(window).height()
