--- a/source/public/index.html
+++ b/source/public/index.html
@@ -18,7 +18,7 @@
     <script type='text/javascript' data-cfasync='false'>
       mobile=$(window).width()<$(window).height()
     </script>
-      <?
+      <?php
         $params = explode('/',  $_SERVER['REQUEST_URI']);
         if(sizeof($params)>0){
           array_shift($params);
