--- a/source/public/index.html
+++ b/source/public/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>codegolf</title>
-    <script src="/js/jquery-2.0.0.min.js"></script>
-    <script src="/js/codemirror/lib/codemirror.js"></script>
-    <script src="/js/codemirror/mode/javascript/javascript.js"></script>
-    <script src="/js/linkify/linkify.min.js"></script>
-    <script src="/js/linkify/linkify-jquery.min.js"></script>
-    <script src="/js.php"></script>
-    <script src="/js/cropit/dist/jquery.cropit.js"></script>
+    <script src="js/jquery-2.0.0.min.js"></script>
+    <script src="js/codemirror/lib/codemirror.js"></script>
+    <script src="js/codemirror/mode/javascript/javascript.js"></script>
+    <script src="js/linkify/linkify.min.js"></script>
+    <script src="js/linkify/linkify-jquery.min.js"></script>
+    <script src="js.php"></script>
+    <script src="js/cropit/dist/jquery.cropit.js"></script>
     <script type='text/javascript' data-cfasync='false'>
       mobile=$(window).width()<$(window).height()
     </script>
